fix: Make button smaller on phones
Add a bunch of comments too

--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -259,7 +259,7 @@ h6 {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	min-height: calc(100vh - 80px);
+	min-height: calc(100vh - 140px); /* Adjusted for mobile header height */
 	background-color: var(--slate-300);
 }
 
@@ -289,7 +289,7 @@ h6 {
 }
 
 /*** Button ***/
-/* 3D Pushable Button Styles */
+/* 3D Pushable Button Styles from https://www.joshwcomeau.com/animation/3d-button/ */
 .btn {
 	position: relative;
 	border: none;
@@ -399,6 +399,11 @@ h6 {
 }
 
 @media only screen and (max-width: 768px) {
+	.button-container {
+		min-height: calc(100vh - 160px);
+		padding-bottom: 2rem;
+	}
+
 	.header-bar {
 		flex-direction: column;
 		align-items: center;
